# The92

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  backlog.txt  fixtures_backfill.csv  pyproject.toml  railway.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
accounts/: admin.py  apps.py  forms.py  models.py  share.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_follow_model.py
config/: settings.py  storage.py  urls.py
config/settings/: base.py  local.py  production.py
data/sportsdb/: fixtures_2026.csv
docs/: design-system.md  layout-grid.md
grounds/: admin.py  models.py  telemetry.py  tests.py  urls.py  views.py
grounds/data/: the92.csv
grounds/migrations/: 0001_initial.py  0002_visit_model.py  0003_add_lat_lng_to_ground.py  0004_add_away_end_to_ground.py  0005_add_shirt_and_info_updated_at.py  0006_add_suggestion_and_tip_models.py  0007_add_match_model.py  0008_ground_editors_group.py  0009_groundsuggestion_proposed_image_and_more.py  0010_remove_team_logo.py  0011_event.py
grounds/templatetags/: ground_extras.py
templates/: 404.html  500.html  base.html  robots.txt
templates/accounts/: edit_profile.html  feed.html  leaderboard.html  profile.html  register.html  share.html
templates/grounds/: ground_detail.html  ground_list.html  historic_visit.html  home.html  map.html  visit_confirm_delete.html
templates/partials/: progress_bar.html  share_buttons.html
templates/registration/: login.html
templates/socialaccount/: login.html  signup.html
(+24 files in other folders)
